# python-sensor

./: .coveragerc  .env-test  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Configuration.md  Dockerfile  Dockerfile-py3140  Dockerfile.test  INSTALLATION.md  LICENSE  MAINTAINERS.md  README.md  RELEASE.md  WSGI.md  docker-compose.yml  gdbinit  old.travis.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh  runtests.py  setup.cfg  setup.py  sonar-project.properties  test_requirements.txt
.circleci/: config.yml  pin_safe_versions.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/scripts/: announce_pr_on_slack.py  announce_release_on_slack.py
.github/workflows/: codeql.yml  linter.yml  opened-pr-notification-on-slack.yml  pkg_release.yml  pr_commits_signed_off.yml  py3140_build.yml  python_next_test.yml  release-notification-on-slack.yml  sonarqube.yml
.tekton/: README.md  github-interceptor-secret.yaml  github-pr-eventlistener.yaml  github-pr-pipeline.yaml.part  github-set-status-task.yaml  github-webhook-ingress.yaml  pipeline.yaml  pipelinerun.yaml  python-tracer-prepuller.yaml  run_unittests.sh  scheduled-eventlistener.yaml  task.yaml
.tekton/.currency/: currency-pipeline.yaml  currency-pipelinerun.yaml  currency-rbac.yaml  currency-scheduled-eventlistener.yaml  currency-tasks.yaml
.tracer-support-matrix/: configuration.yaml  module-name-to-package-name-cache
example/: Dockerfile  carry_context.py  opentracing_vanilla.py  simple.py
example/asyncio/: README.md  aioclient.py  aioserver.py
example/autoprofile/: app.py
example/xmlrpc/: rpcclient.py  rpcserver.py
instana/: __init__.py  __main__.py  agent.py  agent_const.py  api.py  binary_propagator.py  collector.py  configurator.py  custom.py  data.py  django.py  django19.py  eum.js  eum_test.js  flaskana.py  fsm.py  helpers.py  http.py  http_propagator.py  json_span.py  log.py  meter.py  middleware.py  options.py  probe.py  propagator.py  recorder.py  runtime.py  sensor.py  singletons.py  span.py  span_context.py  span_data.py  text_propagator.py  tracer.py  util.py  version.py  wsgi.py
instana/agent/: aws_eks_fargate.py  aws_fargate.py  aws_lambda.py  base.py  google_cloud_run.py  host.py  test.py
instana/autoprofile/: frame_cache.py  profile.py  profiler.py  runtime.py  sampler_scheduler.py  schedule.py
instana/collector/: aws_eks_fargate.py  aws_fargate.py  aws_lambda.py  base.py  google_cloud_run.py  host.py
instana/hooks/: hook_uwsgi.py
instana/instrumentation/: asgi.py  asyncio.py  asynqp.py  aws_lambda.py  boto3_inst.py  cassandra_inst.py  couchbase_inst.py  fastapi_inst.py  flask.py  gevent_inst.py  grpcio.py  instrument_aiohttp.py  instrument_aiomysql.py  instrument_psycopg2.py  instrument_redis.py  instrument_tornado.py  logging.py  mysqlclient.py  mysqlpython.py  pep0249.py  pika.py  psycopg2.py  pymongo.py  pymysql.py  redis.py  sanic_inst.py  sanic_middleware.py  sqlalchemy.py  starlette_inst.py  sudsjurko.py  urllib3.py  webapp2_inst.py  wsgi.py
instana/propagators/: base_propagator.py  binary_propagator.py  binary_propagator_tc.py  exceptions.py  http_propagator.py  http_propagator_tc.py  text_propagator.py
instana/util/: __init__.py  aws.py  ctx_propagation.py  gunicorn.py  headers.py  ids.py  runtime.py  secrets.py  sql.py  traceutils.py
instana/w3c_trace_context/: traceparent.py  tracestate.py  treceparent.py
sandbox/: Dockerfile  Dockerfile.agent  README.md  oc_notes.md  requirements.txt  sample.py
sandbox/agent/: Dockerfile.agent  fake_agent.py
sandbox/app/: Dockerfile  app.py  deployment.yaml  gunicorn.conf.py
sandbox/flask-app/: sample.py
sandbox/k8s/: agent-deployment.yaml  deployment.yaml
sandbox/python-app/: fake-agent.py  sample-app.py
src/instana/: __init__.py  __main__.py  configurator.py  fsm.py  helpers.py  log.py  middleware.py  options.py  recorder.py  sampling.py  singletons.py  span.py  span_context.py  tracer.py  version.py
tests/: __init__.py  conftest.py  helpers.py  requirements-27.txt  requirements-307.txt  requirements-310-with-tornado.txt  requirements-310.txt  requirements-312.txt  requirements-313.txt  requirements-asynqp-legacy-flask-markupsafe.txt  requirements-asynqp.txt  requirements-aws.txt  requirements-cassandra.txt  requirements-couchbase.txt  requirements-gevent-starlette.txt  requirements-gevent.txt  requirements-googlecloud.txt  requirements-graphene.txt  requirements-kafka.txt  requirements-minimal.txt  requirements-pre314.txt  requirements-pre315.txt  requirements.txt  test_agent.py  test_aiohttp.py  test_api_client.py  test_asyncio.py  test_asynqp.py  test_cassandra-driver.py  test_celery.py  test_configurator.py  test_couchbase.py  test_django.py  test_fargate.py  test_flask.py  test_fsm_cmdline.py  test_gevent.py  test_grpcio.py  test_helpers.py  test_id_management.py  (+38 more)
tests/agent/: test_base_agent.py  test_google_cloud_run.py  test_host.py  test_ipv6_support.py  test_serverless_agent.py
tests/agents/: test_aws_fargate.py  test_aws_lambda.py  test_host.py
tests/apps/: __init__.py  app_aiohttp.py  app_django.py  app_pyramid.py  celery.py  flaskalino.py  soapserver4132.py  tornado.py  utils.py
tests/autoprofile/: test_frame_cache.py  test_profiler.py  test_runtime.py
tests/clients/: test_aio_pika.py  test_aioamqp.py  test_asynqp.py  test_boto3.py  test_cassandra-driver.py  test_confluent_kafka.py  test_couchbase.py  test_google-cloud-pubsub.py  test_google-cloud-storage.py  test_httpx.py  test_kafka_python.py  test_logging.py  test_mysql-python.py  test_mysqlclient.py  test_pep0249.py  test_pika.py  test_psycopg2.py  test_pymongo.py  test_pymysql.py  test_redis.py  test_sqlalchemy.py  test_urllib3.py
tests/collector/: test_base_collector.py  test_eksfargate_collector.py  test_gcr_collector.py  test_host_collector.py  test_runtime.py  test_utils.py
tests/conf/: redis.conf
tests/frameworks/: test_aioamqp.py  test_aiohttp.py  (+22 more)
tests_autowrapt/: conftest.py  test_autowrapt.py
tests_aws/: conftest.py
(+308 files in other folders)
